# KT-35147

./: .gitignore  README.md  build-native.sh  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/jni/: CMakeLists.txt  jni.c  jni.h
src/main/kotlin/com/kotlinbug/: NativeObject.kt
src/test/kotlin/com/kotlinbug/: NativeObjectTest.kt
